--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@material/react-button": "^0.3.0",
+    "@material/react-card": "^0.3.0",
     "bootstrap": "^4.1.2",
     "mobx": "^5.0.3",
     "mobx-react": "^5.2.3",
